--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
   <main class="max-w-6xl mx-auto bg-white p-6 rounded-2xl shadow-md">
     <div class="ad-block">
-      <!-- AdSense or other ad platform placeholder -->
       <p class="text-sm text-gray-500">[Ad Placeholder: Top Banner]</p>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
@@ -92,6 +93,8 @@
 
     <div class="ad-block">
       <p class="text-sm text-gray-500">[Ad Placeholder: Inline Ad]</p>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
     </div>
 
     <div>
@@ -109,6 +112,8 @@
 
     <div class="ad-block">
       <p class="text-sm text-gray-500">[Ad Placeholder: Below Convert Button]</p>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
     </div>
 
     <div>
