--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <p class="text-sm text-gray-500">[Ad Placeholder: Top Banner]</p>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
      crossorigin="anonymous"></script>
+      <script async src="https://cse.google.com/cse.js?cx=a066a224e3b474192">
+</script>
+<div class="gcse-search"></div>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
