--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal Code Converter</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
   <style>
     .drag-area {
       border: 2px dashed #ccc;
@@ -35,9 +35,15 @@
 
   <main class="max-w-6xl mx-auto bg-white p-6 rounded-2xl shadow-md">
     <div class="ad-block">
-      <p class="text-sm text-gray-500">[Ad Placeholder: Top Banner]</p>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
-     crossorigin="anonymous"></script>
+      <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-2100678421769476"
+       data-ad-slot="5928317742"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
@@ -105,9 +111,15 @@
     </div>
 
     <div class="ad-block">
-      <p class="text-sm text-gray-500">[Ad Placeholder: Below Convert Button]</p>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
-     crossorigin="anonymous"></script>
+      <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-2100678421769476"
+       data-ad-slot="5928317742"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
     </div>
 
     <div>
