--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       border: 1px solid #e0e0e0;
       border-radius: 0.5rem;
       text-align: center;
-      margin: 1rem 0;
+      margin: 2rem 0;
+      min-height:320px;
     }
   </style>
 </head>
