--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal Code Converter</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
 <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .drag-area {
