--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     <h1 class="text-3xl font-bold text-indigo-600">Universal Code Converter</h1>
     <p class="text-gray-600 mt-2">Convert code between popular programming languages with ease.</p>
   </header>
+  
+ <main class="max-w-6xl mx-auto bg-white p-6 rounded-2xl shadow-md">
 
-  <main class="max-w-6xl mx-auto bg-white p-6 rounded-2xl shadow-md">
+   <div style="width:728px; height:90px;"></div>
+
     <div class="ad-block">
       <ins class="adsbygoogle"
        style="display:block"
@@ -111,6 +114,8 @@
       <button onclick="downloadCode()" class="bg-gray-200 px-6 py-2 rounded hover:bg-gray-300">📥 Download Converted Code</button>
       <button onclick="copyCode()" class="bg-gray-200 px-6 py-2 rounded hover:bg-gray-300">📋 Copy to Clipboard</button>
     </div>
+   
+<div style="width:728px; height:90px;"></div>
 
     <div class="ad-block">
       <ins class="adsbygoogle"
