--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <p class="text-gray-600 mt-2">Convert code between popular programming languages with ease.</p>
   </header>
   
- <main class="max-w-6xl mx-auto bg-white p-6 rounded-2xl shadow-md">
 
-   <div style="width:728px; height:90px;"></div>
-
+   <div style="width:4px; height:2px;"></div>
     <div class="ad-block">
+      <p class="text-sm text-gray-500">
+      <div class="ad-block">
       <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-2100678421769476"
@@ -49,6 +49,7 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
+    </div></p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
@@ -115,9 +116,10 @@
       <button onclick="copyCode()" class="bg-gray-200 px-6 py-2 rounded hover:bg-gray-300">📋 Copy to Clipboard</button>
     </div>
    
-<div style="width:728px; height:90px;"></div>
-
+<div style="width:4px; height:2px;"></div>
     <div class="ad-block">
+      <p class="text-sm text-gray-500">
+      <div class="ad-block">
       <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-2100678421769476"
@@ -127,6 +129,7 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
+    </div></p>
     </div>
 
     <div>
