--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
     </div></p>
     </div>
 
@@ -129,6 +131,8 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
+     crossorigin="anonymous"></script>
     </div></p>
     </div>
 
