--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal Code Converter</title>
-  <!-- Stripe Donation Button -->
+<!-- Simple Dark Grey Stripe Donation Button -->
 <a href="https://buy.stripe.com/test_7sYfZgfGi000fKX5h443S00" target="_blank">
   <button style="
-    background-color: #FF69B4;
+    background-color: #333333;
     color: white;
-    padding: 14px 28px;
+    padding: 12px 24px;
     border: none;
-    border-radius: 10px;
-    font-size: 18px;
-    font-weight: bold;
+    border-radius: 6px;
+    font-size: 16px;
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-  " onmouseover="this.style.backgroundColor='#FF1493'" onmouseout="this.style.backgroundColor='#FF69B4'">
-    💖 Donate Now
+  ">
+    Donate
   </button>
 </a>
+
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2100678421769476"
      crossorigin="anonymous"></script>
